# pp_rust_basics

./: .gitignore  Cargo.toml  README.md
app-http/: Cargo.toml
app-http/src/: main.rs
data/: created_data.parquet  data.csv  data.json
hello-rust/: Cargo.toml
hello-rust/data/: data.parquet
hello-rust/src/: main.rs
hello-rust/src/utils/io/: csv_io.rs  json_io.rs  parquet_io.rs
